[package]
name = "memory-map"
version = "0.1.0"
edition = "2021"
[lib]
crate-type = ["cdylib"]

[dependencies]
libc_alloc = "1.0.5"
nonoverlapping_interval_tree = { version = "0.1.5", default-features = false }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(debug)', 'cfg(list_regions)'] }

[profile.dev]
panic = "abort"
strip = "symbols"
lto = true

[profile.release]
panic = "abort"
strip = "symbols"
lto = true
